Revises the styling of the topic editing page to reflect new Bootstrap conventions and resolve spacing in the topic list

--- a/app/static/custom.css
+++ b/app/static/custom.css
@@ -29,3 +29,7 @@ blockquote {
 	list-style: none;
 	column-gap:  2rem;
 }
+
+.edit-post-topics--topic-list > li {
+	line-height: 3;
+}
